<resources>
  <string name="app_name">Suggest a Movie</string>
  <string name="now_playing">Now Playing</string>
  <string name="suggestion">Suggestion</string>
  <string name="content_descr_thumbnail">Movie thumbnail</string>
  <string name="rating_format">Rating: %.1f/10</string>
  <string name="btn_find">Discover</string>
  <string name="include_adult">Include adult results</string>
  <string name="release_year">Release</string>
  <string name="rating">Rating</string>
  <string name="genres">Genres</string>
  <string name="release_format">Release: %s</string>
  <string name="unable_connect">Unable to connect</string>
  <string name="unable_connect_movie_detail">Unable to load movie data. Are you connected to the internet?</string>
  <string name="retry">RETRY</string>
  <string name="transition_movie">transition_movie</string>
  <string name="transition_movie_img">transition_movie_img</string>
  <string name="content_descr_genre">Genre icon</string>

  <string name="genre_action">Action</string>
  <string name="genre_adventure">Adventure</string>
  <string name="genre_animation">Animation</string>
  <string name="genre_comedy">Comedy</string>
  <string name="genre_crime">Crime</string>
  <string name="genre_documentary">Documentary</string>
  <string name="genre_drama">Drama</string>
  <string name="genre_family">Family</string>
  <string name="genre_fantasy">Fantasy</string>
  <string name="genre_history">History</string>
  <string name="genre_horror">Horror</string>
  <string name="genre_music">Music</string>
  <string name="genre_mystery">Mystery</string>
  <string name="genre_romance">Romance</string>
  <string name="genre_scifi">Science Fiction</string>
  <string name="genre_thriller">Thriller</string>
  <string name="genre_tv_movie">TV Movie</string>
  <string name="genre_war">War</string>
  <string name="genre_western">Western</string>

  <string name="select_release_rating">1. SELECT RELEASE AND RATING</string>
  <string name="select_genres">2. SELECT GENRES</string>

  <string name="filter">Filter Results</string>
  <string name="filter_descr">These movies match your filter settings</string>

  <string name="watchlist">Watchlist</string>
  <string name="watchlist_descr">Movies you like</string>

  <string name="similar">Similar Movies</string>
  <string name="similar_descr">These movies are similar to %s</string>

  <string name="search">Search Results</string>
  <string name="search_descr">These movies match \'%s\'</string>

  <string name="movie_removed">Removed %s</string>
  <string name="undo">UNDO</string>

  <string name="watchlist_empty1">Your watchlist is empty</string>
  <string name="watchlist_empty2">Click the button to find new movies</string>

  <string name="search_empty1">Couldn\'t find any results</string>
  <string name="search_empty2">Either change your search settings or make sure you are connected to the internet</string>

  <string name="enter_movie">Enter movie title</string>

  <string name="input_empty">The input can not be empty</string>

  <string name="fab_search_by_name">Discover by movie title</string>
  <string name="fab_search_by_filter">Discover by filtering</string>

  <string name="recommendations">Recommendations</string>
  <string name="recommendations_descr">Based on the movie </string>
  <string name="recommendations_descr_alt">Recommendations based on your watchlist</string>

  <string name="now_playing_descr">These movies are in the movie theaters right now</string>
  <string name="sort_by">Sort by</string>
  <string name="video">Video</string>
  <string name="cast">Cast</string>

  <!-- Sort By -->
  <string name="sort_popularity">Popularity</string>
  <string name="sort_release_date">Release date</string>
  <string name="sort_vote_average">Vote average</string>

  <string name="settings">Settings</string>
  <string name="title_activity_settings">Settings</string>

  <string name="pref_header_formatting">Formatting</string>
  <string name="pref_formatting_date">Date Format</string>

  <string-array name="pref_date_format_titles">
    <item>Short</item>
    <item>Medium</item>
    <item>Long</item>
  </string-array>
  <string-array name="pref_date_format_values">
    <item>short</item>
    <item>medium</item>
    <item>long</item>
  </string-array>
  <string name="summary_original_title">Enabling this will replace the local movie title with the original title. Depending on your language, there might not be a difference between the local title and the original title.</string>
  <string name="title_show_original_title">Show original title</string>

  <string name="pref_header_network">Network</string>
  <string name="title_thumbnail_loading">Load thumbnails without Wi-Fi</string>
  <string name="summary_thumbnail_loading">Disabling this can reduce data usage if you are not connected to a Wi-Fi network.</string>

  <string name="budget">Budget: %s</string>
  <string name="no_budget">Budget unknown</string>
  <string name="revenue">Revenue: %s</string>
  <string name="no_revenue">Revenue unknown</string>
  <string name="runtime">Runtime: %d minutes</string>
  <string name="no_runtime">Runtime unknown</string>

  <string name="problem_youtube">There was a problem loading Youtube</string>

  <string name="player_error">Error initializing YouTube player: %s</string>
  <string name="seek_to">Jump To</string>
  <string name="seek_to_hint">Seconds</string>

  <string name="find_similar">FIND SIMILAR</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value"/>

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
</resources>
