<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- These settings headers are only used on tablets. -->

  <header
    android:fragment="de.kaiwidmaier.suggestamovie.activities.SettingsActivity$FormattingPreferenceFragment"
    android:icon="@drawable/ic_text_format_black_24dp"
    android:title="@string/pref_header_formatting"/>

  <header
    android:fragment="de.kaiwidmaier.suggestamovie.activities.SettingsActivity$NotificationPreferenceFragment"
    android:icon="@drawable/ic_network_wifi_black_24dp"
    android:title="@string/pref_header_network"/>

  <header
    android:fragment="de.kaiwidmaier.suggestamovie.activities.SettingsActivity$DataSyncPreferenceFragment"
    android:icon="@drawable/ic_sync_black_24dp"
    android:title="@string/pref_header_data_sync"/>

</preference-headers>
