<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:rsb="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp"
  tools:context="de.kaiwidmaier.suggestamovie.activities.DiscoverActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_weight="0.2"
      android:text="@string/release_year"/>

  <org.florescu.android.rangeseekbar.RangeSeekBar
    android:id="@+id/seekbar_release"
    app:showLabels="false"
    app:valuesAboveThumbs="true"
    app:textAboveThumbsColor="@color/colorAccent"
    android:layout_weight="0.5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"/>

</LinearLayout>

  <CheckBox
    android:id="@+id/checkbox_include_adult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:buttonTint="@color/colorPrimary"
    android:text="@string/include_adult"
    android:textColor="#808080"/>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/text_rating_label"
      android:layout_weight="0.2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_gravity="bottom"
      android:text="@string/rating"/>

    <org.florescu.android.rangeseekbar.RangeSeekBar
      android:id="@+id/seekbar_rating"
      android:layout_weight="0.5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:showLabels="false"
      app:textAboveThumbsColor="@color/colorAccent"
      app:valuesAboveThumbs="true"
      android:layout_marginTop="16dp"/>

  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="Genres (Leave unchecked to include all):"/>


</LinearLayout>
